fix: text wrapping

--- a/lib/components/SegmentedControl/segmented-control.scss
+++ b/lib/components/SegmentedControl/segmented-control.scss
@@ -27,6 +27,8 @@
             cursor: pointer;
             position: relative;
             z-index: 2;
+            min-width: 0;
+            white-space: nowrap;
 
             * {
                 z-index: 2;
