--- a/lib/components/SelectionControl/radio/radio-button/radio-button.scss
+++ b/lib/components/SelectionControl/radio/radio-button/radio-button.scss
@@ -4,17 +4,13 @@
         align-items: center;
 
         &__label {
-            margin-left: 8px;
-            line-height: 24px;
-            font:
-                16px "IBM Plex Sans",
-                sans-serif;
+            margin-left: var(--core-spacing-400);
         }
         &__input {
             display: none;
         }
         &__info {
-            margin-left: 8px;
+            margin-left: var(--core-spacing-400);
         }
     }
 }
