feat: radio button style changes

--- a/lib/components/SelectionControl/radio/radio-button/radio-button.scss
+++ b/lib/components/SelectionControl/radio/radio-button/radio-button.scss
@@ -5,6 +5,20 @@
 
         &__label {
             margin-left: var(--core-spacing-400);
+            cursor: pointer;
+        }
+        &__icon svg{
+            cursor: pointer;
+
+            &:focus {
+                outline: none;
+
+                &-visible {
+                    border: none;
+                    border-radius: 50%;
+                    box-shadow: 0 0 var(--core-borderWidth-75) var(--core-borderWidth-100) var(--core-color-solid-blue-700) inset;
+                }
+            }
         }
         &__input {
             display: none;
