--- a/lib/components/SelectionControl/radio/radio-button/radio-button.scss
+++ b/lib/components/SelectionControl/radio/radio-button/radio-button.scss
@@ -9,6 +9,8 @@
         }
         &__icon svg{
             cursor: pointer;
+            display: flex;
+            flex-direction: column;
 
             &:focus {
                 outline: none;
