refactor: add scss styles as per figma

--- a/lib/components/SelectionControl/checkbox/checkbox-single/checkbox.scss
+++ b/lib/components/SelectionControl/checkbox/checkbox-single/checkbox.scss
@@ -6,7 +6,7 @@
 @import "@quill/others.scss";
 
 .quill-checkbox {
-    display: inline-flex;
+    display: flex;
     position: relative;
     align-items: center;
     gap: var(--semantic-spacing-gap-md);
