chore: added size change for typography using in chip component

--- a/lib/components/chip/_chip.scss
+++ b/lib/components/chip/_chip.scss
@@ -1,3 +1,7 @@
+@import "@quill/spacing.scss";
+@import "@quill/border.scss";
+@import "@quill/color.opacity.scss";
+
 .quill-chip {
     display: flex;
     align-items: center;
