--- a/lib/styles/quill/breakpoints.scss
+++ b/lib/styles/quill/breakpoints.scss
@@ -4,26 +4,27 @@
             @content;
         }
     }
-    @if $breakpoint == "md" {
+    @else if $breakpoint == "md" {
         @media (min-width: 768px) {
             @content;
         }
     }
-    @if $breakpoint == "lg" {
+    @else if $breakpoint == "lg" {
         @media (min-width: 1024px) {
             @content;
         }
     }
-    @if $breakpoint == "xl" {
+    @else if $breakpoint == "xl" {
         @media (min-width: 1280px) {
             @content;
         }
     }
-    @if $breakpoint == "2xl" {
+    @else if $breakpoint == "2xl" {
         @media (min-width: 1440px) {
             @content;
         }
-    } @else {
+    } 
+    @else {
         @warn "Unknown breakpoint: #{$breakpoint}.";
     }
 }
