fix: changed tab folder name and updated icon for fb

--- a/lib/components/Tab/tab.scss
+++ b/lib/components/Tab/tab.scss
@@ -6,7 +6,7 @@
 @import '@quill/opacity.scss';
 @import '@quill/color.opacity.scss';
 
-.tabs {
+.tab-menu {
     border-bottom: var(--core-borderRadius-100) solid var(--core-color-opacity-black-200);
     display: inline-flex;
 
