--- a/lib/components/Tab/tab.scss
+++ b/lib/components/Tab/tab.scss
@@ -5,16 +5,32 @@
 @import '@quill/size.scss';
 @import '@quill/opacity.scss';
 
+:root {
+    .theme--light {
+        --border-bottom-color-default: var(--core-color-opacity-black-100);
+        --border-bottom-color-hover: var(--core-color-opacity-black-200);
+        --border-bottom-color-active: var(--core-color-opacity-black-300);
+
+    }
+
+    .theme--dark {
+        --border-bottom-color-default: var(--core-color-opacity-white-100);
+        --border-bottom-color-hover: var(--core-color-opacity-white-200);
+        --border-bottom-color-active: var(--core-color-opacity-white-300);
+
+    }
+}
+
 .tab-menu {
-    border-bottom: var(--core-borderRadius-100) solid var(--core-color-opacity-black-200);
+    border-bottom: var(--core-borderRadius-100) solid var(--border-bottom-color-default);
     display: inline-flex;
 
     &:active:not(:disabled) {
-        border-bottom-color: var(--core-borderRadius-100) solid var(--core-color-opacity-black-300);
+        border-bottom-color: var(--core-borderRadius-100) solid var(--border-bottom-color-active);
     }
 
     &:hover:not(:disabled) {
-        border-bottom-color: var(--semantic-color-typography-default);
+        border-bottom-color: var(--border-bottom-color-hover);
     }
 
     &:disabled {
@@ -26,46 +42,46 @@
     }
 
     &__variants {
-            &__fill {
-                &-size {
-                    &-sm {
-                        padding: var(--core-spacing-200) var(--core-spacing-400);
-                        min-width: 106px;
-                        text-wrap: nowrap;
-                        justify-content: center;
-                        gap: var(--core-spacing-200);
-                    }
-    
-                    &-md {
-                        min-width: 106px;
-                        text-wrap: nowrap;
-                        padding: var(--core-spacing-400) var(--core-spacing-800);
-                        justify-content: center;
-                        gap: var(--core-spacing-400);
-                    }
-                }              
-            }
-
-            &__hug {
-                &-size {
-                    &-sm {
-                        padding: var(--core-spacing-200) var(--core-spacing-800) var(--core-spacing-200) var(--core-spacing-400);
-                        justify-content: center;
-                        text-wrap: nowrap;
-                        gap: var(--core-spacing-200);
-                    }
-    
-                    &-md {
-                        padding: var(--core-spacing-400) var(--core-spacing-1200) var(--core-spacing-400) var(--core-spacing-800);
-                        justify-content: center;
-                        text-wrap: nowrap;
-                        gap: var(--core-spacing-400);
-                    }
+        &__fill {
+            &-size {
+                &-sm {
+                    padding: var(--core-spacing-200) var(--core-spacing-400);
+                    min-width: 106px;
+                    text-wrap: nowrap;
+                    justify-content: center;
+                    gap: var(--core-spacing-200);
                 }
-               
+
+                &-md {
+                    min-width: 106px;
+                    text-wrap: nowrap;
+                    padding: var(--core-spacing-400) var(--core-spacing-800);
+                    justify-content: center;
+                    gap: var(--core-spacing-400);
+                }
+            }
+        }
+
+        &__hug {
+            &-size {
+                &-sm {
+                    padding: var(--core-spacing-200) var(--core-spacing-800) var(--core-spacing-200) var(--core-spacing-400);
+                    justify-content: center;
+                    text-wrap: nowrap;
+                    gap: var(--core-spacing-200);
+                }
+
+                &-md {
+                    padding: var(--core-spacing-400) var(--core-spacing-1200) var(--core-spacing-400) var(--core-spacing-800);
+                    justify-content: center;
+                    text-wrap: nowrap;
+                    gap: var(--core-spacing-400);
+                }
             }
 
         }
-    
+
+    }
+
 
 }
