--- a/lib/components/Tab/tab.scss
+++ b/lib/components/Tab/tab.scss
@@ -7,14 +7,12 @@
 
 :root {
     .theme--light {
-        --border-bottom-color-default: var(--core-color-opacity-black-100);
         --border-bottom-color-hover: var(--core-color-opacity-black-200);
         --border-bottom-color-active: var(--core-color-opacity-black-300);
 
     }
 
     .theme--dark {
-        --border-bottom-color-default: var(--core-color-opacity-white-100);
         --border-bottom-color-hover: var(--core-color-opacity-white-200);
         --border-bottom-color-active: var(--core-color-opacity-white-300);
 
@@ -22,22 +20,18 @@
 }
 
 .tab-menu {
-    border-bottom: var(--core-borderRadius-100) solid var(--border-bottom-color-default);
     display: inline-flex;
 
-    &:active:not(:disabled) {
-        border-bottom-color: var(--core-borderRadius-100) solid var(--border-bottom-color-active);
+    &:hover:not(:disabled):not([aria-selected="true"]) {
+        border-bottom:var(--core-borderRadius-100) solid var(--border-bottom-color-hover);
     }
-
-    &:hover:not(:disabled) {
-        border-bottom-color: var(--border-bottom-color-hover);
+    &:active:not(:disabled):not([aria-selected="true"]) {
+        border-bottom: var(--core-borderRadius-100) solid var(--border-bottom-color-active);
     }
-
     &:disabled {
         opacity: var(--core-opacity-600);
     }
-
-    &__selected-tab {
+    &[aria-selected="true"]:not(:disabled):not(:active){
         border-bottom: var(--core-borderRadius-100) solid var(--semantic-color-typography-prominent);
     }
 
@@ -65,14 +59,14 @@
         &__hug {
             &-size {
                 &-sm {
-                    padding: var(--core-spacing-200) var(--core-spacing-800) var(--core-spacing-200) var(--core-spacing-400);
+                    padding: var(--core-spacing-200) var(--core-spacing-400);
                     justify-content: center;
                     text-wrap: nowrap;
                     gap: var(--core-spacing-200);
                 }
 
                 &-md {
-                    padding: var(--core-spacing-400) var(--core-spacing-1200) var(--core-spacing-400) var(--core-spacing-800);
+                    padding: var(--core-spacing-400) var(--core-spacing-800);
                     justify-content: center;
                     text-wrap: nowrap;
                     gap: var(--core-spacing-400);
