--- a/lib/styles/quill/elevation.scss
+++ b/lib/styles/quill/elevation.scss
@@ -74,4 +74,8 @@
         0 4 8 2 rgba(0, 0, 0, 2%);
     --semantic-elevation-shadow-overflow-left: -4 0 8 2 rgba(0, 0, 0, 3%),
         -4 0 8 2 rgba(0, 0, 0, 2%);
+    --component-snackbar-elevation-shadow: 0 4 8 2 rgba(0, 0, 0, 3%),
+        0 4 8 2 rgba(0, 0, 0, 2%);
+    --component-dropdownList-elevation-shadow: 0 16 24 4 rgba(0, 0, 0, 4%),
+        0 16 24 4 rgba(0, 0, 0, 2%);
 }
