--- a/lib/styles/quill/spacing.scss
+++ b/lib/styles/quill/spacing.scss
@@ -73,6 +73,64 @@
     --semantic-spacing-gap-2xl: 24px;
     --semantic-spacing-gap-3xl: 32px;
     --semantic-spacing-gap-4xl: 32px;
+    --component-selectionControl-spacing-gap-sm: 8px;
+    --component-selectionControl-spacing-gap-md: 8px;
+    --component-tab-spacing-padding-sm: 8px;
+    --component-tab-spacing-padding-md: 16px;
+    --component-tab-spacing-gap-sm: 4px;
+    --component-tab-spacing-gap-md: 8px;
+    --component-field-spacing-padding-sm: 8px;
+    --component-field-spacing-padding-md: 16px;
+    --component-field-spacing-gap-xs: 4px;
+    --component-field-spacing-gap-sm: 8px;
+    --component-toggle-spacing-padding: 2px;
+    --component-modal-spacing-bottom-padding-sm: 24px;
+    --component-modal-spacing-bottom-padding-lg: 44px;
+    --component-modal-spacing-bottom-gap: 24px;
+    --component-modal-spacing-overlay-padding-sm: 24px;
+    --component-modal-spacing-overlay-padding-md: 32px;
+    --component-modal-spacing-overlay-gap: 32px;
+    --component-button-spacing-padding-sm: 8px;
+    --component-button-spacing-padding-md: 12px;
+    --component-button-spacing-padding-lg: 16px;
+    --component-button-spacing-padding-xl: 24px;
+    --component-button-spacing-gap-sm: 4px;
+    --component-button-spacing-gap-md: 6px;
+    --component-button-spacing-gap-lg: 8px;
+    --component-button-spacing-gap-xl: 12px;
+    --component-segmentedControl-spacing-padding-item-sm: 8px;
+    --component-segmentedControl-spacing-padding-item-md: 16px;
+    --component-segmentedControl-spacing-padding-item-lg: 24px;
+    --component-segmentedControl-spacing-padding-body-sm: 4px;
+    --component-segmentedControl-spacing-padding-body-md: 8px;
+    --component-segmentedControl-spacing-padding-body-lg: 12px;
+    --component-segmentedControl-spacing-gap-item-sm: 4px;
+    --component-segmentedControl-spacing-gap-item-md: 8px;
+    --component-segmentedControl-spacing-gap-item-lg: 12px;
+    --component-segmentedControl-spacing-gap-body: 1px;
+    --component-pagination-spacing-gap-body: 8px;
+    --component-actionSheet-spacing-padding-sm: 8px;
+    --component-actionSheet-spacing-padding-md: 16px;
+    --component-actionSheet-spacing-padding-lg: 24px;
+    --component-actionSheet-spacing-gap-sm: 8px;
+    --component-actionSheet-spacing-gap-md: 12px;
+    --component-snackbar-spacing-padding-sm: 8px;
+    --component-snackbar-spacing-padding-md: 16px;
+    --component-snackbar-spacing-gap: 8px;
+    --component-badge-notification-spacing-padding-sm: 5px;
+    --component-badge-notification-spacing-padding-md: 7px;
+    --component-badge-notification-spacing-padding-lg: 10.5px;
+    --component-dropdownItem-spacing-padding-sm: 12px;
+    --component-dropdownItem-spacing-padding-md: 16px;
+    --component-dropdownItem-spacing-gap-xs: 4px;
+    --component-dropdownItem-spacing-gap-sm: 6px;
+    --component-dropdownItem-spacing-gap-md: 8px;
+    --component-dropdownList-spacing-padding-sm: 4px;
+    --component-dropdownList-spacing-padding-md: 8px;
+    --component-dropdownList-spacing-padding-lg: 16px;
+    --component-dropdownList-spacing-padding-xl: 24px;
+    --component-dropdownList-spacing-gap-sm: 16px;
+    --component-dropdownList-spacing-gap-md: 24px;
 }
 @media (min-width: 640px) {
     :root {
