--- a/lib/styles/quill/color.opacity.scss
+++ b/lib/styles/quill/color.opacity.scss
@@ -17,6 +17,7 @@
     --core-color-opacity-black-600: rgba(0, 0, 0, 0.72);
     --core-color-opacity-black-700: rgba(0, 0, 0, 0.8);
     --core-color-opacity-black-800: rgba(0, 0, 0, 0.88);
+    --core-color-opacity-red-75: rgba(230, 25, 14, 0.04);
     --core-color-opacity-red-100: rgba(230, 25, 14, 0.08);
     --core-color-opacity-red-200: rgba(230, 25, 14, 0.16);
     --core-color-opacity-red-300: rgba(230, 25, 14, 0.24);
@@ -25,6 +26,7 @@
     --core-color-opacity-red-600: rgba(230, 25, 14, 0.72);
     --core-color-opacity-red-700: rgba(230, 25, 14, 0.8);
     --core-color-opacity-red-800: rgba(230, 25, 14, 0.88);
+    --core-color-opacity-orange-75: rgba(245, 95, 10, 0.04);
     --core-color-opacity-orange-100: rgba(245, 95, 10, 0.08);
     --core-color-opacity-orange-200: rgba(245, 95, 10, 0.16);
     --core-color-opacity-orange-300: rgba(245, 95, 10, 0.24);
@@ -33,6 +35,7 @@
     --core-color-opacity-orange-600: rgba(245, 95, 10, 0.72);
     --core-color-opacity-orange-700: rgba(245, 95, 10, 0.8);
     --core-color-opacity-orange-800: rgba(245, 95, 10, 0.88);
+    --core-color-opacity-yellow-75: rgba(255, 156, 19, 0.04);
     --core-color-opacity-yellow-100: rgba(255, 156, 19, 0.08);
     --core-color-opacity-yellow-200: rgba(255, 156, 19, 0.16);
     --core-color-opacity-yellow-300: rgba(255, 156, 19, 0.24);
@@ -41,6 +44,7 @@
     --core-color-opacity-yellow-600: rgba(255, 156, 19, 0.72);
     --core-color-opacity-yellow-700: rgba(255, 156, 19, 0.8);
     --core-color-opacity-yellow-800: rgba(255, 156, 19, 0.88);
+    --core-color-opacity-mustard-75: rgba(247, 198, 11, 0.04);
     --core-color-opacity-mustard-100: rgba(247, 198, 11, 0.08);
     --core-color-opacity-mustard-200: rgba(247, 198, 11, 0.16);
     --core-color-opacity-mustard-300: rgba(247, 198, 11, 0.24);
@@ -49,6 +53,7 @@
     --core-color-opacity-mustard-600: rgba(247, 198, 11, 0.72);
     --core-color-opacity-mustard-700: rgba(247, 198, 11, 0.8);
     --core-color-opacity-mustard-800: rgba(247, 198, 11, 0.88);
+    --core-color-opacity-olive-75: rgba(224, 218, 2, 0.04);
     --core-color-opacity-olive-100: rgba(224, 218, 2, 0.08);
     --core-color-opacity-olive-200: rgba(224, 218, 2, 0.16);
     --core-color-opacity-olive-300: rgba(224, 218, 2, 0.24);
@@ -57,6 +62,7 @@
     --core-color-opacity-olive-600: rgba(224, 218, 2, 0.72);
     --core-color-opacity-olive-700: rgba(224, 218, 2, 0.8);
     --core-color-opacity-olive-800: rgba(224, 218, 2, 0.88);
+    --core-color-opacity-green-75: rgba(0, 136, 50, 0.04);
     --core-color-opacity-green-100: rgba(0, 136, 50, 0.08);
     --core-color-opacity-green-200: rgba(0, 136, 50, 0.16);
     --core-color-opacity-green-300: rgba(0, 136, 50, 0.24);
@@ -65,6 +71,7 @@
     --core-color-opacity-green-600: rgba(0, 136, 50, 0.72);
     --core-color-opacity-green-700: rgba(0, 136, 50, 0.8);
     --core-color-opacity-green-800: rgba(0, 136, 50, 0.88);
+    --core-color-opacity-emerald-75: rgba(0, 195, 144, 0.04);
     --core-color-opacity-emerald-100: rgba(0, 195, 144, 0.08);
     --core-color-opacity-emerald-200: rgba(0, 195, 144, 0.16);
     --core-color-opacity-emerald-300: rgba(0, 195, 144, 0.24);
@@ -73,6 +80,7 @@
     --core-color-opacity-emerald-600: rgba(0, 195, 144, 0.72);
     --core-color-opacity-emerald-700: rgba(0, 195, 144, 0.8);
     --core-color-opacity-emerald-800: rgba(0, 195, 144, 0.88);
+    --core-color-opacity-tiffany-75: rgba(23, 234, 189, 0.04);
     --core-color-opacity-tiffany-100: rgba(23, 234, 189, 0.08);
     --core-color-opacity-tiffany-200: rgba(23, 234, 189, 0.16);
     --core-color-opacity-tiffany-300: rgba(23, 234, 189, 0.24);
@@ -81,6 +89,7 @@
     --core-color-opacity-tiffany-600: rgba(23, 234, 189, 0.72);
     --core-color-opacity-tiffany-700: rgba(23, 234, 189, 0.8);
     --core-color-opacity-tiffany-800: rgba(23, 234, 189, 0.88);
+    --core-color-opacity-teal-75: rgba(0, 204, 204, 0.04);
     --core-color-opacity-teal-100: rgba(0, 204, 204, 0.08);
     --core-color-opacity-teal-200: rgba(0, 204, 204, 0.16);
     --core-color-opacity-teal-300: rgba(0, 204, 204, 0.24);
@@ -89,6 +98,7 @@
     --core-color-opacity-teal-600: rgba(0, 204, 204, 0.72);
     --core-color-opacity-teal-700: rgba(0, 204, 204, 0.8);
     --core-color-opacity-teal-800: rgba(0, 204, 204, 0.88);
+    --core-color-opacity-seawater-75: rgba(10, 160, 176, 0.04);
     --core-color-opacity-seawater-100: rgba(10, 160, 176, 0.08);
     --core-color-opacity-seawater-200: rgba(10, 160, 176, 0.16);
     --core-color-opacity-seawater-300: rgba(10, 160, 176, 0.24);
@@ -97,6 +107,7 @@
     --core-color-opacity-seawater-600: rgba(10, 160, 176, 0.72);
     --core-color-opacity-seawater-700: rgba(10, 160, 176, 0.8);
     --core-color-opacity-seawater-800: rgba(10, 160, 176, 0.88);
+    --core-color-opacity-blue-75: rgba(44, 154, 255, 0.04);
     --core-color-opacity-blue-100: rgba(44, 154, 255, 0.08);
     --core-color-opacity-blue-200: rgba(44, 154, 255, 0.16);
     --core-color-opacity-blue-300: rgba(44, 154, 255, 0.24);
@@ -105,6 +116,7 @@
     --core-color-opacity-blue-600: rgba(44, 154, 255, 0.72);
     --core-color-opacity-blue-700: rgba(44, 154, 255, 0.8);
     --core-color-opacity-blue-800: rgba(44, 154, 255, 0.88);
+    --core-color-opacity-sapphire-75: rgba(12, 40, 247, 0.04);
     --core-color-opacity-sapphire-100: rgba(12, 40, 247, 0.08);
     --core-color-opacity-sapphire-200: rgba(12, 40, 247, 0.16);
     --core-color-opacity-sapphire-300: rgba(12, 40, 247, 0.24);
@@ -113,6 +125,7 @@
     --core-color-opacity-sapphire-600: rgba(12, 40, 247, 0.72);
     --core-color-opacity-sapphire-700: rgba(12, 40, 247, 0.8);
     --core-color-opacity-sapphire-800: rgba(12, 40, 247, 0.88);
+    --core-color-opacity-blueberry-75: rgba(73, 2, 224, 0.04);
     --core-color-opacity-blueberry-100: rgba(73, 2, 224, 0.08);
     --core-color-opacity-blueberry-200: rgba(73, 2, 224, 0.16);
     --core-color-opacity-blueberry-300: rgba(73, 2, 224, 0.24);
@@ -121,6 +134,7 @@
     --core-color-opacity-blueberry-600: rgba(73, 2, 224, 0.72);
     --core-color-opacity-blueberry-700: rgba(73, 2, 224, 0.8);
     --core-color-opacity-blueberry-800: rgba(73, 2, 224, 0.88);
+    --core-color-opacity-grape-75: rgba(127, 13, 207, 0.04);
     --core-color-opacity-grape-100: rgba(127, 13, 207, 0.08);
     --core-color-opacity-grape-200: rgba(127, 13, 207, 0.16);
     --core-color-opacity-grape-300: rgba(127, 13, 207, 0.24);
@@ -129,6 +143,7 @@
     --core-color-opacity-grape-600: rgba(127, 13, 207, 0.72);
     --core-color-opacity-grape-700: rgba(127, 13, 207, 0.8);
     --core-color-opacity-grape-800: rgba(127, 13, 207, 0.88);
+    --core-color-opacity-magenta-75: rgba(203, 13, 247, 0.04);
     --core-color-opacity-magenta-100: rgba(203, 13, 247, 0.08);
     --core-color-opacity-magenta-200: rgba(203, 13, 247, 0.16);
     --core-color-opacity-magenta-300: rgba(203, 13, 247, 0.24);
@@ -137,6 +152,7 @@
     --core-color-opacity-magenta-600: rgba(203, 13, 247, 0.72);
     --core-color-opacity-magenta-700: rgba(203, 13, 247, 0.8);
     --core-color-opacity-magenta-800: rgba(203, 13, 247, 0.88);
+    --core-color-opacity-cherry-75: rgba(222, 0, 64, 0.04);
     --core-color-opacity-cherry-100: rgba(222, 0, 64, 0.08);
     --core-color-opacity-cherry-200: rgba(222, 0, 64, 0.16);
     --core-color-opacity-cherry-300: rgba(222, 0, 64, 0.24);
@@ -145,6 +161,7 @@
     --core-color-opacity-cherry-600: rgba(222, 0, 64, 0.72);
     --core-color-opacity-cherry-700: rgba(222, 0, 64, 0.8);
     --core-color-opacity-cherry-800: rgba(222, 0, 64, 0.88);
+    --core-color-opacity-coral-75: rgba(255, 68, 79, 0.04);
     --core-color-opacity-coral-100: rgba(255, 68, 79, 0.08);
     --core-color-opacity-coral-200: rgba(255, 68, 79, 0.16);
     --core-color-opacity-coral-300: rgba(255, 68, 79, 0.24);
@@ -153,6 +170,7 @@
     --core-color-opacity-coral-600: rgba(255, 68, 79, 0.72);
     --core-color-opacity-coral-700: rgba(255, 68, 79, 0.8);
     --core-color-opacity-coral-800: rgba(255, 68, 79, 0.88);
+    --core-color-opacity-slate-75: rgba(65, 70, 82, 0.04);
     --core-color-opacity-slate-100: rgba(65, 70, 82, 0.08);
     --core-color-opacity-slate-200: rgba(65, 70, 82, 0.16);
     --core-color-opacity-slate-300: rgba(65, 70, 82, 0.24);
