--- a/lib/components/Pagination/base/pagination-base.scss
+++ b/lib/components/Pagination/base/pagination-base.scss
@@ -2,6 +2,7 @@
 @import "@quill/border.scss";
 @import "@quill/color.opacity.scss";
 @import "@quill/color.semantic.scss"; 
+@import "@quill/motion.scss";
 
 .variant{
     &__number {
@@ -15,10 +16,14 @@
         border-radius: var(--core-size-200);
         &:hover {
             background-color: var(--core-color-opacity-black-100);
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
         }
 
         &:active {
             background-color: var(--core-color-opacity-black-200);
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
         }
         &[aria-current=true] {
             background-color: var(--core-color-solid-slate-1400);
@@ -29,22 +34,46 @@
     
     }
     &__bullet {
-        
-        &-svg {
-            fill: var(--core-color-opacity-black-75);
-            cursor: pointer;
-        &[aria-current=true] {
-           fill: var(--semantic-color-typography-prominent);
+        width: var(--core-size-400);
+        height: var(--core-size-400);
+        border-radius: var( --core-size-4800);
+        background-color: var(--core-color-opacity-black-75);
+        cursor: pointer;
+        &:hover {
+            background-color: var(--core-color-opacity-black-100);
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
         }
+        &:active {
+            background-color: var(--core-color-opacity-black-200);
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
+        }
+        &[aria-current=true] {
+             background-color: var(--semantic-color-typography-prominent);
         }
         
     }
 }
 .hidden_pages {
-    display: flex;
+   
+    height: var(--core-size-1600);
+    width: var(--core-size-1600);
+    border-radius: var(--core-size-200);
+
+    &-dots {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: var(--semantic-color-typography-disabled);
+        font-size: var(--core-size-600);
+        width: var(--core-size-1600);
+        height: var(--core-size-900);
+        text-align: center;
+    }
 }
 .number-text{
-    &[aria-current=true]{
+    &[aria-current=true] {
         font-weight: bold;
         color: var(--core-color-solid-slate-50);
     }
