--- a/lib/components/Pagination/pagination.scss
+++ b/lib/components/Pagination/pagination.scss
@@ -10,10 +10,26 @@
         display: flex;
         align-items: center;
         cursor: pointer;
+        justify-content: center;
+        height: var(--core-size-1600);
+        width: var(--core-size-1600);
+        border-radius: var(--core-size-200);
         color: var(--semantic-color-typography-prominent);
+     
         &:disabled{
             cursor: auto;
             color: var(--semantic-color-typography-disabled);
+        }
+        &:hover:not(:disabled) {
+            background-color: var(--core-color-opacity-black-100);
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
+        }
+
+        &:active:not(:disabled) {
+            background-color: var(--core-color-opacity-black-200);
+            animation-timing-function: var(--core-motion-ease-400);
+            animation-duration: var(--core-motion-duration-200);
         }
         
         &-svg {
