chore: update action sheet

--- a/lib/components/ActionSheet/content/content.scss
+++ b/lib/components/ActionSheet/content/content.scss
@@ -4,4 +4,5 @@
     padding-top: var(--semantic-spacing-general-lg);
     padding-bottom: var(--semantic-spacing-general-lg);
     flex-grow: 1;
+    overflow-y: auto;
 }
