chore: updated tokens and merge css files

--- a/lib/styles/index.scss
+++ b/lib/styles/index.scss
@@ -1,5 +1,5 @@
 /* Global Styles */
-@import "@quill/color.semantic.scss"; //need
+@import "@quill/quill.scss";
 @import "./reset.scss";
 
 @at-root {
