--- a/lib/components/Notification/notification.scss
+++ b/lib/components/Notification/notification.scss
@@ -10,13 +10,60 @@
 // TODO: remove unnecessary imports
 
 .notification {
-    &-banner,
-    &-banner__mobile {
+    position: relative;
+    display: flex;
+    width: 100%;
+    cursor: pointer;
+    height: fit-content;
+    background-color: var(--semantic-color-background-dialog);
+
+    .icon {
         position: relative;
         display: flex;
+        flex-shrink: 0;
+        justify-content: center;
         align-items: center;
-        width: 100%;
-        height: fit-content;
+        width: 32px;
+        height: 32px;
+        border-radius: var(--semantic-borderRadius-pill);
+        cursor: pointer;
+
+        &.info {
+            background-color: var(--core-color-opacity-blue-100);
+        }
+        &.error {
+            background-color: var(--core-color-opacity-red-100);
+        }
+        &.success {
+            background-color: var(--core-color-opacity-green-100);
+        }
+        &.warning {
+            background-color: var(--core-color-opacity-yellow-100);
+        }
+        &.close {
+            position: absolute;
+            width: 24px;
+            height: 24px;
+            right: 8px;
+            top: 8px;
+            border-radius: unset;
+        }
+        .badge-unread {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 8px;
+            height: 8px;
+            border-radius: 96px;
+            background-color: rgba(230, 25, 14, 1);
+        }
+    }
+    .body {
+        display: flex;
+        gap: 16px;
+    }
+    &-banner,
+    &-banner__mobile {
         min-height: 72px;
         padding: 16px 32px 16px 16px;
         border-radius: 16px;
@@ -32,47 +79,10 @@
                 var(--semantic-color-typography-prominent) 3%,
                 transparent
             );
-        background-color: var(--semantic-color-background-dialog);
-        cursor: pointer;
         animation: 240ms cubic-bezier(0.72, 0, 0.24, 1) enter-desktop;
         transform: translateY(0);
         transition: transform 240ms cubic-bezier(0.72, 0, 0.24, 1);
 
-        .icon {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 32px;
-            height: 32px;
-            border-radius: var(--semantic-borderRadius-pill);
-            cursor: pointer;
-
-            &.info {
-                background-color: var(--core-color-opacity-blue-100);
-            }
-            &.error {
-                background-color: var(--core-color-opacity-red-100);
-            }
-            &.success {
-                background-color: var(--core-color-opacity-green-100);
-            }
-            &.warning {
-                background-color: var(--core-color-opacity-yellow-100);
-            }
-            &.close {
-                position: absolute;
-                width: 24px;
-                height: 24px;
-                right: 8px;
-                top: 8px;
-                border-radius: unset;
-            }
-        }
-        .body {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-        }
         &.hidden {
             transform: translateY(100vh);
         }
@@ -91,7 +101,7 @@
         bottom: 8px;
         left: 8px;
         z-index: 6;
-    
+
         &__mobile {
             top: 8px;
             bottom: unset;
@@ -99,9 +109,32 @@
         }
     }
     &-item {
-        display: flex;
-        align-items: center;
-        width: 100%;
+        padding: 16px;
+        justify-content: space-between;
+        min-height: 98px;
+
+        .time {
+            color: rgba(0, 0, 0, 0.48);
+            margin-top: 4px;
+        }
+        .buttons {
+            display: flex;
+            align-self: center;
+            gap: 8px;
+            visibility: hidden;
+        }
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.04);
+        }
+        &:active {
+            background-color: rgba(0, 0, 0, 0.08);
+        }
+        &:hover,
+        &:active {
+            .buttons {
+                visibility: visible;
+            }
+        }
     }
 }
 
