--- a/lib/components/Tab/tab.scss
+++ b/lib/components/Tab/tab.scss
@@ -10,35 +10,46 @@
     .theme--light {
         --border-bottom-color-hover: var(--core-color-opacity-black-200);
         --border-bottom-color-active: var(--core-color-opacity-black-300);
-
     }
-
     .theme--dark {
         --border-bottom-color-hover: var(--core-color-opacity-white-200);
         --border-bottom-color-active: var(--core-color-opacity-white-300);
-
     }
 }
 
 .tab-menu {
     display: inline-flex;
-    border-bottom:var(--core-borderRadius-100) solid transparent;
+    cursor: pointer;
+    position: relative;
+    white-space: nowrap;
+    z-index: 2;
+    border-bottom:  var(--core-borderRadius-100) solid transparent;
    
-    &:hover:not(:disabled):not([aria-selected="true"]) {
-        border-bottom:var(--core-borderRadius-100) solid var(--border-bottom-color-hover);
-        animation-timing-function: var(--motion-easing-inandout);
-        animation-duration: var(--core-motion-duration-200);
+    &:hover:not(:disabled) {
+        border-bottom:  var(--core-borderRadius-100) solid var(--border-bottom-color-hover);
     }
-    &:active:not(:disabled):not([aria-selected="true"]) {
+
+    &:active:not(:disabled) {
         border-bottom: var(--core-borderRadius-100) solid var(--border-bottom-color-active);
-        animation-timing-function: var(--motion-easing-inandout);
-        animation-duration: var(--core-motion-duration-200);
     }
+    &[aria-selected="true"]:not(:disabled):not(:active):not(hover) {
+        border-bottom: var(--core-borderRadius-100) solid var(--semantic-color-typography-prominent);
+    }
+
     &:disabled {
         opacity: var(--core-opacity-600);
+        cursor: auto;
     }
-    &[aria-selected="true"]:not(:disabled):not(:active){
-        border-bottom: var(--core-borderRadius-100) solid var(--semantic-color-typography-prominent);
+    &.animated::before{
+        content: '';
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        animation: slide-in var(--core-motion-duration-200) var(--motion-easing-inandout);
+        border-bottom: var(--core-borderWidth-75) solid var(--semantic-color-typography-prominent)
     }
 
     &__variants {
@@ -78,10 +89,16 @@
                     gap: var(--core-spacing-400);
                 }
             }
-
         }
+    }
+}
 
+@keyframes slide-in {
+    0% {
+        transform: translateX(-100%);
     }
 
-
+    100% {
+        transform: translateX(0);
+    }
 }
