--- a/lib/components/SelectionControl/toggle-switch/toggle-switch.scss
+++ b/lib/components/SelectionControl/toggle-switch/toggle-switch.scss
@@ -1,19 +1,19 @@
-:root {
-    .theme--light {
-        --switch-background-color: var(--core-color-opacity-black-200);
-        --switch-active-color: var(--core-color-opacity-black-400);
-        --switch-enabled: var(--core-color-opacity-green-600);
-        --switch-active-enabled-color: var(--core-color-solid-green-900);
-        --switch-hover-enabled-color: var(--core-color-opacity-green-800);
-    }
-    .theme--dark {
-        --switch-background-color: var(--core-color-opacity-white-400);
-        --switch-active-color: var(--core-color-opacity-white-200);
-        --switch-enabled: var(--core-color-opacity-green-800);
-        --switch-active-enabled-color: var(--core-color-opacity-green-400);
-        --switch-hover-enabled-color: var(--core-color-opacity-green-600);
-    }
+html.light {
+    --switch-background-color: var(--core-color-opacity-black-200);
+    --switch-active-color: var(--core-color-opacity-black-400);
+    --switch-enabled: var(--core-color-opacity-green-600);
+    --switch-active-enabled-color: var(--core-color-solid-green-900);
+    --switch-hover-enabled-color: var(--core-color-opacity-green-800);
 }
+
+html.dark {
+    --switch-background-color: var(--core-color-opacity-white-400);
+    --switch-active-color: var(--core-color-opacity-white-200);
+    --switch-enabled: var(--core-color-opacity-green-800);
+    --switch-active-enabled-color: var(--core-color-opacity-green-400);
+    --switch-hover-enabled-color: var(--core-color-opacity-green-600);
+}
+
 
 .toggle-switch {
     display: flex;
@@ -24,11 +24,12 @@
     width: var(--core-size-2400);
     height: var(--core-size-1400);
     border-width: var(--core-borderRadius-100);
+
     &:focus {
-        outline: var(--core-borderRadius-100) solid
-            var(--core-color-solid-blue-700);
+        outline: var(--core-borderRadius-100) solid var(--core-color-solid-blue-700);
         border-radius: var(--semantic-borderRadius-lg);
     }
+
     &__slider {
         display: flex;
         align-items: center;
@@ -40,6 +41,7 @@
         transition: background-color var(--core-motion-duration-200) ease;
         cursor: pointer;
         position: relative;
+
         &:hover {
             background-color: var(--semantic-color-typography-disabled);
         }
@@ -50,6 +52,7 @@
 
         &.enabled {
             background-color: var(--switch-enabled);
+
             &:hover {
                 background-color: var(--switch-hover-enabled-color);
             }
@@ -59,6 +62,7 @@
             }
         }
     }
+
     &__knob {
         position: absolute;
         width: var(--core-size-1000);
@@ -69,10 +73,12 @@
         top: 50%;
         transform: translateY(-50%);
         left: var(--core-spacing-100);
+
         &.enabled {
             left: calc(100% - calc(var(--core-size-2200) / 2));
         }
     }
+
     .enabled {
         .toggle-switch__knob {
             left: calc(100% - calc(var(--core-size-2200) / 2));
@@ -81,6 +87,7 @@
 
     &:disabled {
         pointer-events: none;
+
         .toggle-switch__knob {
             background-color: var(--core-color-opacity-white-400);
         }
