--- a/lib/components/Tab/tab.scss
+++ b/lib/components/Tab/tab.scss
@@ -1,13 +1,13 @@
-:root {
-    .theme--light {
-        --border-bottom-color-hover: var(--core-color-opacity-black-200);
-        --border-bottom-color-active: var(--core-color-opacity-black-300);
-    }
-    .theme--dark {
-        --border-bottom-color-hover: var(--core-color-opacity-white-200);
-        --border-bottom-color-active: var(--core-color-opacity-white-300);
-    }
+html.light {
+    --border-bottom-color-hover: var(--core-color-opacity-black-200);
+    --border-bottom-color-active: var(--core-color-opacity-black-300);
 }
+
+html.dark {
+    --border-bottom-color-hover: var(--core-color-opacity-white-200);
+    --border-bottom-color-active: var(--core-color-opacity-white-300);
+}
+
 
 .tab-menu {
     display: inline-flex;
@@ -15,15 +15,16 @@
     position: relative;
     white-space: nowrap;
     z-index: 2;
-    border-bottom:  var(--core-borderRadius-100) solid transparent;
-   
+    border-bottom: var(--core-borderRadius-100) solid transparent;
+
     &:hover:not(:disabled) {
-        border-bottom:  var(--core-borderRadius-100) solid var(--border-bottom-color-hover);
+        border-bottom: var(--core-borderRadius-100) solid var(--border-bottom-color-hover);
     }
 
     &:active:not(:disabled) {
         border-bottom: var(--core-borderRadius-100) solid var(--border-bottom-color-active);
     }
+
     &[aria-selected="true"]:not(:disabled):not(:active):not(hover) {
         border-bottom: var(--core-borderRadius-100) solid var(--semantic-color-typography-prominent);
     }
